# MM32G0001-CMake

./: CMakeLists.txt  README.md  ldscript.ld
Device/MM32G0001/HAL_Lib/inc/: hal_adc.h  hal_conf.h  hal_flash.h  hal_i2c.h  hal_rcc.h  hal_tim.h  hal_uid.h  hal_usart.h
Device/MM32G0001/HAL_Lib/src/: hal_adc.c  hal_flash.c  hal_i2c.c  hal_pwr.c  hal_rcc.c  hal_spi.c  hal_tim.c  hal_uid.c  hal_usart.c
Device/MM32G0001/Include/: delay.h  mm32_device.h  mm32g0001.h  reg_adc.h  reg_crc.h  reg_dbg.h  reg_exti.h  reg_flash.h  reg_gpio.h  reg_i2c.h  reg_iwdg.h  reg_pwr.h  reg_rcc.h  reg_spi.h  reg_syscfg.h  reg_tim.h  reg_usart.h
Device/MM32G0001/Source/: delay.c  startup_mm32g0001_gcc.s  system_mm32g0001.c
include/: mm32g0001_it.h
src/: fuck.cpp  mm32g0001_it.c
